--- a/src/assets/sass/critical.scss
+++ b/src/assets/sass/critical.scss
@@ -223,7 +223,7 @@
 /* Desktop Parallax Effect - 1300px */
 @media only screen and (min-width: 81.25em) {
     #hero {
-        background: url("/assets/images/landing.jpg");
+        background: url("/assets/images/interior2.jpg");
         background-position: center;
         background-size: cover;
         background-repeat: no-repeat;
