--- a/src/_includes/components/cta.html
+++ b/src/_includes/components/cta.html
@@ -10,25 +10,23 @@
             With Us Today
         </h2>
         <p>
-            Say something catchy, informative, and encouraging to click the
-            button to go to the contact page. I like to add these to the bottom
-            of all pages.
+            Let’s talk—your dream space is just a click away. Whether you're planning a small upgrade or a major renovation, our team is here to guide you every step of the way.
         </p>
         <a href="/contact" class="cs-button-solid">Get an Estimate Now</a>
     </div>
     <picture>
         <source
             media="(max-width: 600px)"
-            srcset="/assets/images/cabinets2-m.jpg"
+            srcset="/assets/images/7.jpg"
         />
         <source
             media="(min-width: 601px)"
-            srcset="/assets/images/cabinets2.jpg"
+            srcset="/assets/images/7.jpg"
         />
         <img
             aria-hidden="true"
             decoding="async"
-            src="/assets/images/cabinets2.jpg"
+            src="/assets/images/7.jpg"
             alt="kitchen cabinets"
             loading="lazy"
             width="2500"
