--- a/src/_includes/components/footer.html
+++ b/src/_includes/components/footer.html
@@ -9,15 +9,11 @@
                 ><img
                     loading="lazy"
                     decoding="async"
-                    src="/assets/svgs/logo-white.svg"
+                    src="/assets/images/edlogo-3.png"
                     alt="logo"
-                    width="264"
-                    height="78"
+                    width="600"
+                    height="200"
             /></a>
-            <p>
-                Extra content if you need it, if not you can delete this whole p
-                tag. I usually do.
-            </p>
         </div>
         <div class="right-section">
             <div class="lists">
@@ -31,17 +27,17 @@
                     <li>
                         <a href="/about">About Us</a>
                     </li>
-                    <li>
+                    <!-- <li>
                         <a href="/projects">Projects</a>
-                    </li>
-                    <li>
+                    </li> -->
+                    <!-- <li>
                         <a href="/reviews">Reviews</a>
-                    </li>
+                    </li> -->
                     <li>
                         <a href="/contact">Contact</a>
                     </li>
                 </ul>
-                <ul>
+                <!-- <ul>
                     <li>
                         <h2>Services</h2>
                     </li>
@@ -49,7 +45,7 @@
                     <li>Service2</li>
                     <li>Service4</li>
                     <li>Service5</li>
-                </ul>
+                </ul> -->
                 <ul>
                     <li>
                         <h2>Contact</h2>
@@ -57,7 +53,6 @@
                     <li>
                         <a href="/contact">
                             {{ client.address.lineOne }}<br />
-                            {{ client.address.lineTwo }}<br />
                             {{ client.address.city }}
                             {{ client.address.state }}
                             {{ client.address.zip }}
@@ -77,8 +72,6 @@
     </div>
 
     <div class="credit">
-        <span>Designed and Hand Coded by</span>
-        <a href="/" target="_blank" rel="noopener">Your Company Name</a>
-        <span class="copyright"> Copyright {% year %} - Present</span>
+        <span class="copyright"> Copyright © {% year %} E&D Renovations</span>
     </div>
 </footer>
