--- a/src/_includes/layouts/base.html
+++ b/src/_includes/layouts/base.html
@@ -73,8 +73,21 @@
         <script defer src="/assets/js/nav.js"></script>
 
         {% block head %}{% endblock %}
+        <!-- Open Graph meta tags -->
+        <meta property="og:title" content="E&D Renovations">
+        <meta property="og:description" content="Top-tier home renovations and contracting services.">
+        <meta property="og:image" content="https://ed-renovations.com/images/logo-meta.jpg">
+        <meta property="og:url" content="https://ed-renovations.com">
+        <meta property="og:type" content="website">
 
-        <title>{{ title }}</title>
+        <!-- Optional: Twitter Card meta tags -->
+        <meta name="twitter:card" content="summary_large_image">
+        <meta name="twitter:title" content="E&D Renovations">
+        <meta name="twitter:description" content="Top-tier home renovations and contracting services.">
+        <meta name="twitter:image" content="https://ed-renovations.com/images/logo-meta.jpg">
+
+
+        <title>E&D Renovations</title>
     </head>
     <body>
         <!--Screen reader skip main nav-->
