--- a/src/assets/css/root.css
+++ b/src/assets/css/root.css
@@ -33,7 +33,7 @@
   }
   .cs-title {
     position: relative;
-    margin: auto auto 1rem auto;
+    margin: 0 0 1rem 0;
     max-width: 43.75rem;
     font-size: var(--headerFontSize);
     line-height: 1.2em;
@@ -42,7 +42,7 @@
     text-align: inherit;
   }
   .cs-text {
-    margin: 0 auto;
+    margin: 0;
     max-width: 40.625rem;
     width: 100%;
     font-size: var(--bodyFontSize);
@@ -1046,7 +1046,7 @@
     display: inline-block;
     margin: auto;
     margin-bottom: 1.875em;
-    height: 8em;
+    height: 10rem;
     width: auto;
     text-align: center;
   }
@@ -1171,7 +1171,7 @@
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
-    justify-content: space-around;
+    justify-content: space-between;
     margin: auto;
     max-width: 82.5rem;
     width: 96%;
@@ -1180,7 +1180,7 @@
   #footer .left-section {
     margin: 0;
     width: 25.5625rem;
-    text-align: center;
+    text-align: left;
   }
   #footer .left-section .logo {
     margin-left: 0;
@@ -1193,6 +1193,7 @@
   }
   #footer .right-section {
     margin: 0;
+    max-width: none;
     width: 38.0625rem;
   }
   #footer .right-section .lists {
