--- a/src/assets/sass/root.scss
+++ b/src/assets/sass/root.scss
@@ -1282,7 +1282,7 @@
                 display: inline-block;
                 margin: auto;
                 margin-bottom: calc(30 / 16 * 1em);
-                height: calc(32 / 16 * 1em);
+                height: 10rem;
                 width: auto;
                 text-align: center;
 
@@ -1437,7 +1437,7 @@
 
             .logo {
                 margin-left: 0;
-                height: calc(40 / 16 * 1rem);
+                height: 10rem;
                 text-align: left;
             }
 
