--- a/src/assets/css/local.css
+++ b/src/assets/css/local.css
@@ -68,6 +68,7 @@
   #sbs .cs-title {
     max-width: 50rem;
     text-align: left;
+    margin: auto;
   }
   #sbs .cs-text {
     margin-bottom: 1rem;
@@ -356,6 +357,8 @@
     margin-bottom: 2.5rem;
     max-width: 38.8125rem;
     text-align: center;
+    margin-left: auto;
+    margin-right: auto;
   }
   #gallery .cs-image-group {
     display: flex;
@@ -429,6 +432,8 @@
 @media only screen and (min-width: 0rem) {
   body.dark-mode #gallery .cs-title {
     color: var(--bodyTextColorWhite);
+    margin-left: auto;
+    margin-right: auto;
   }
 }
 /*-- -------------------------- -->
@@ -453,16 +458,20 @@
   #reviews .cs-title {
     max-width: 43.75rem;
     text-align: center;
+    margin-left: auto;
+    margin-right: auto;
   }
   #reviews .cs-text {
     /* 88px - 104px */
     margin-bottom: clamp(5.5em, 10.2vw, 6.5em);
     max-width: 40.625rem;
     text-align: center;
+    margin-left: auto;
+    margin-right: auto;
   }
   #reviews .cs-card-group {
     /* 48px - 64px */
-    margin: 0 auto clamp(3rem, 5vw, 4rem);
+    margin: auto clamp(3rem, 5vw, 4rem);
     padding: 0;
   }
   #reviews .cs-item {
