--- a/src/_includes/layouts/base.html
+++ b/src/_includes/layouts/base.html
@@ -7,26 +7,26 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta name="description" content="{{ description }}" />
+        <meta name="description" content="At E&D Renovations, we bring your vision to life with expert craftsmanship and reliable service. Licensed and insured, we handle residential and commercial renovations, custom builds, and more—delivering quality results on time and on budget." />
         <meta name="keywords" content="" />
         <link rel="canonical" href="{{ client.domain }}{{ page.url }}" />
 
         <!--Social Media Display-->
         <meta property="og:title" content="{{ title }}" />
-        <meta property="og:description" content="{{ description }}" />
+        <meta property="og:description" content="At E&D Renovations, we bring your vision to life with expert craftsmanship and reliable service. Licensed and insured, we handle residential and commercial renovations, custom builds, and more—delivering quality results on time and on budget." />
         <meta property="og:type" content="website" />
         <meta property="og:url" content="{{ client.domain }}{{ page.url }}" />
-        <meta property="og:image" content="/assets/images/logo-small.png" />
+        <meta property="og:image" content="/assets/images/logo-meta.jpg" />
         <meta
             property="og:image:secure_url"
-            content="/assets/images/logo-small.png"
+            content="/assets/favicons/favicon.png"
         />
 
         <!--Favicons-->
         <link
             rel="apple-touch-icon"
             sizes="180x180"
-            href="/assets/favicons/apple-touch-icon.png"
+            href="/assets/favicons/favicon.png"
         />
         <link
             rel="icon"
@@ -40,7 +40,7 @@
             sizes="16x16"
             href="/assets/favicons/favicon.png"
         />
-        <link rel="manifest" href="/assets/favicons/site.webmanifest" />
+        <link rel="manifest" href="/assets/favicons/favicon.png" />
         <meta name="msapplication-TileColor" content="#da532c" />
         <meta name="theme-color" content="#ffffff" />
 
