--- a/src/assets/sass/local.scss
+++ b/src/assets/sass/local.scss
@@ -595,9 +595,9 @@
             /* Prevents padding from affecting height & width */
             box-sizing: border-box;
             /* Padding L & R - 16px - 32px */
-            padding: calc(60 / 16 * 1rem) clamp(1rem, 3.2vw, 2rem) 0;
+            padding: 2rem;
             /* 32px - 40px */
-            padding-bottom: clamp(2rem, 5.4vw, 2.5rem);
+            padding-bottom: 2rem;
             list-style: none;
             text-align: left;
             box-shadow: 0px 20px 39px 0px rgba(0, 0, 0, 0.05);
